syntax = "proto3";

package PokemonGo.RocketAPI.GeneratedCode;

import "AllEnum.proto";

message GetPlayerResponse {
    int32 unknown1 = 1;
    Profile profile = 2;
}

message Profile {
  int64 creation_time = 1;
  string username = 2;
  .AllEnum.TeamColor team = 5;
  bytes tutorial = 7; 
  AvatarDetails avatar = 8; 
  int32 poke_storage = 9;
  int32 item_storage = 10;
  DailyBonus daily_bonus = 11;
  bytes unknown12 = 12;
  bytes unknown13 = 13;
  repeated Currency currency = 14;
}

message DailyBonus {
  int64 NextCollectTimestampMs = 1;
  int64 NextDefenderBonusCollectTimestampMs = 2;
}

message Currency {
  string type = 1;
  int32 amount = 2;
}

message AvatarDetails {
  int32 unknown2 = 2;
  int32 unknown3 = 3;
  int32 unknown9 = 9;
  int32 unknown10 = 10;
}

message DownloadSettingsRequest {
  string hash = 1;
}

message GetInventoryResponse {
  bool success = 1;
  InventoryDelta inventory_delta = 2;
}

message InventoryDelta {
  int64 original_timestamp_ms = 1;
  int64 new_timestamp_ms = 2;
  repeated InventoryItem inventory_items = 3;
}

message InventoryItem {
  int64 modified_timestamp_ms = 1;
  int64 deleted_item_key = 2;
  InventoryItemData inventory_item_data = 3;
}

message InventoryItemData {
  PokemonData pokemon = 1;
  Item item = 2;
  PokedexEntry pokedex_entry = 3;
  PlayerStats player_stats = 4;
  PlayerCurrency player_currency = 5;
  PlayerCamera player_camera = 6;
  InventoryUpgrades inventory_upgrades = 7;
  AppliedItems applied_items = 8;
  EggIncubators egg_incubators = 9;
  PokemonFamily pokemon_family = 10;
}

message RecycleInventoryItem {
	.AllEnum.ItemId item_id = 1;
	int32 count = 2;
}

message Pokemon {
  int32 id = 1;
  .AllEnum.PokemonId pokemon_type = 2;
  int32 cp = 3;
  int32 stamina = 4;
  int32 stamina_max = 5;
  .AllEnum.PokemonMove move_1 = 6;
  .AllEnum.PokemonMove move_2 = 7;
  int32 deployed_fort_id = 8;
  string owner_name = 9;
  bool is_egg = 10;
  int32 egg_km_walked_target = 11;
  int32 egg_km_walked_start = 12;
  int32 origin = 14;
  float height_m = 15;
  float weight_kg = 16;
  int32 individual_attack = 17;
  int32 individual_defense = 18;
  int32 individual_stamina = 19;
  float cp_multiplier = 20;
  int32 pokeball = 21;
  uint64 captured_cell_id = 22;
  int32 battles_attacked = 23;
  int32 battles_defended = 24;
  int32 egg_incubator_id = 25;
  uint64 creation_time_ms = 26;
  int32 num_upgrades = 27;
  float additional_cp_multiplier = 28;
  int32 favorite = 29;
  string nickname = 30;
  int32 from_fort = 31;
}

message Item {
  .AllEnum.ItemType item = 1;
  int32 count = 2;
  bool unseen = 3;
}

message PokedexEntry {
  int32 pokedex_entry_number = 1;
  int32 times_encountered = 2;
  int32 times_captured = 3;
  int32 evolution_stone_pieces = 4;
  int32 evolution_stones = 5;
}

message PlayerStats {
  int32 level = 1;
  int64 experience = 2;
  int64 prev_level_xp = 3;
  int64 next_level_xp = 4;
  float km_walked = 5;
  int32 pokemons_encountered = 6;
  int32 unique_pokedex_entries = 7;
  int32 pokemons_captured = 8;
  int32 evolutions = 9;
  int32 poke_stop_visits = 10;
  int32 pokeballs_thrown = 11;
  int32 eggs_hatched = 12;
  int32 big_magikarp_caught = 13;
  int32 battle_attack_won = 14;
  int32 battle_attack_total = 15;
  int32 battle_defended_won = 16;
  int32 battle_training_won = 17;
  int32 battle_training_total = 18;
  int32 prestige_raised_total = 19;
  int32 prestige_dropped_total = 20;
  int32 pokemon_deployed = 21;
  bytes pokemon_caught_by_type = 22; // TODO: repeated PokemonType ??
  int32 small_rattata_caught = 23;
}

message PlayerCurrency {
  int32 gems = 1;
}

message PlayerCamera {
  bool is_default_camera = 1;
}

message InventoryUpgrades {
  repeated InventoryUpgrade inventory_upgrades = 1;
}

message InventoryUpgrade {
  .AllEnum.ItemType item = 1;
  .AllEnum.InventoryUpgradeType upgrade_type = 2;
  int32 additional_storage = 3;
}

message AppliedItems {
  AppliedItem item = 4;
}

message AppliedItem {
  .AllEnum.ItemId item_type = 1;
  .AllEnum.ItemType item_type_category = 2;
  int64 expire_ms = 3;
  int64 applied_ms = 4;
}

message EggIncubators {
  EggIncubator egg_incubator = 1;
}

message EggIncubator {
  string item_id = 1;
  .AllEnum.ItemType item_type = 2;
  .AllEnum.EggIncubatorType incubator_type = 3;
  int32 uses_remaining = 4;
  int64 pokemon_id = 5; // TODO: Check if is PokemonType
  double start_km_walked = 6;
  double target_km_walked = 7;
}

message PokemonFamily {
  .AllEnum.PokemonFamilyId family_id = 1;
  int32 candy = 2;
}

message GetMapObjectsRequest {
  bytes cell_id = 1;
  bytes since_timestamp_ms = 2;
  double latitude = 3;
  double longitude = 4;
}

message GetMapObjectsResponse {
  repeated MapCell map_cells = 1;
  .AllEnum.MapObjectsStatus status = 2;
}

message MapCell {
  // S2 geographic area that the cell covers (http://s2map.com/) (https://code.google.com/archive/p/s2-geometry-library/)
  uint64 s2_cell_id = 1;
  int64 current_timestamp_ms = 2;
  repeated FortData forts = 3;
  repeated SpawnPoint spawn_points = 4;
  repeated string deleted_objects = 6;
  bool is_truncated_list = 7;
  repeated FortSummary fort_summaries = 8;
  repeated SpawnPoint decimated_spawn_points = 9;

  // Pokemon within 2 steps or less.
  repeated WildPokemon wild_pokemons = 5;
  // Pokemon within 1 step or none.
  repeated MapPokemon catchable_pokemons = 10;
  // Pokemon farther away than 2 steps, but still in the area.
  repeated NearbyPokemon nearby_pokemons = 11;
}

message FortData {
  string id = 1;
  int64 last_modified_timestamp_ms = 2;
  double latitude = 3;
  double longitude = 4;
  bool enabled = 8;
  .AllEnum.FortType type = 9;

  //// Fields related to gyms only

  // Team that owns the gym
  .AllEnum.TeamColor owned_by_team = 5;

  // Highest CP Pokemon at the gym
  .AllEnum.PokemonId guard_pokemon_id = 6;
  int32 guard_pokemon_cp = 7;

  // Prestigate / experience of the gym
  int64 gym_points = 10;

  // Whether someone is battling at the gym currently
  bool is_in_battle = 11;

  //// Fields related to pokestops only

  // Timestamp when the pokestop can be activated again to get items / xp
  int64 cooldown_complete_timestamp_ms = 14;

  .AllEnum.FortSponsor sponsor = 15;
  .AllEnum.FortRenderingType rendering_type = 16;

  // Might represent the type of item applied to the pokestop, right now only lures can be applied
  bytes active_fort_modifier = 12;
  FortLureInfo lure_info = 13;
}

message FortLureInfo {
  string fort_id = 1;
  double unknown2 = 2;
  .AllEnum.PokemonId active_pokemon_id = 3;
  int64 lure_expires_timestamp_ms = 4;
}

message SpawnPoint {
  double latitude = 2;
  double longitude = 3;
}

message FortSummary {
  int32 fort_summary_id = 1;
  int32 last_modified_timestamp_ms = 2;
  int32 latitude = 3;
  int32 longitude = 4;
}

message WildPokemon {
  fixed64 encounter_id = 1;
  int64 last_modified_timestamp_ms = 2;
  double latitude = 3;
  double longitude = 4;
  string spawnpoint_id = 5;
  PokemonData pokemon_data = 7;
  int32 time_till_hidden_ms = 11;
}

message PokemonData {
  fixed64 id = 1;
  .AllEnum.PokemonId pokemon_id = 2;
  int32 cp = 3;
  int32 stamina = 4;
  int32 stamina_max = 5;
  .AllEnum.PokemonMove move_1 = 6;
  .AllEnum.PokemonMove move_2 = 7;
  int32 deployed_fort_id = 8;
  string owner_name = 9;
  bool is_egg = 10;
  int32 egg_km_walked_target = 11;
  int32 egg_km_walked_start = 12;
  int32 origin = 14;
  float height_m = 15;
  float weight_kg = 16;
  int32 individual_attack = 17;
  int32 individual_defense = 18;
  int32 individual_stamina = 19;
  float cp_multiplier = 20;
  int32 pokeball = 21;
  uint64 captured_cell_id = 22;
  int32 battles_attacked = 23;
  int32 battles_defended = 24;
  int32 egg_incubator_id = 25;
  uint64 creation_time_ms = 26;
  int32 num_upgrades = 27;
  float additional_cp_multiplier = 28;
  int32 favorite = 29;
  string nickname = 30;
  int32 from_fort = 31;
}

message MapPokemon {
  string spawnpoint_id = 1;
  fixed64 encounter_id = 2;
  .AllEnum.PokemonId pokemon_id = 3;
  // After this timestamp, the pokemon will be gone.
  int64 expiration_timestamp_ms = 4;
  double latitude = 5;
  double longitude = 6;
}

message NearbyPokemon {
  .AllEnum.PokemonId pokemon_id = 1;
  float distance_in_meters = 2;
  fixed64 encounter_id = 3;
}

message DownloadSettingsResponse {
  string error = 1;
  string hash = 2;
  GlobalSettings settings = 3;
}

message GlobalSettings {
  FortSettings fort_settings = 2;
  MapSettings map_settings = 3;
  LevelSettings level_settings = 4;
  InventorySettings inventory_settings = 5;
  string minimum_client_version = 6;
}

message FortSettings {
  double interaction_range_meters = 1;
  int32 max_total_deployed_pokemon = 2;
  int32 max_player_deployed_pokemon = 3;
  double deploy_stamina_multiplier = 4;
  double deploy_attack_multiplier = 5;
  double far_interaction_range_meters = 6;
}

message MapSettings {
  double pokemon_visible_range = 1;
  double poke_nav_range_meters = 2;
  double encounter_range_meters = 3;
  float get_map_objects_min_refresh_seconds = 4;
  float get_map_objects_max_refresh_seconds = 5;
  float get_map_objects_min_distance_meters = 6;
  string google_maps_api_key = 7;
}

message LevelSettings {
  double trainer_cp_modifier = 2;
  double trainer_difficulty_modifier = 3;
}

message InventorySettings {
  int32 max_pokemon = 1;
  int32 max_bag_items = 2;
  int32 base_pokemon = 3;
  int32 base_bag_items = 4;
  int32 base_eggs = 5;
}

message PlayerUpdateRequest {
  double latitude = 1;
  double longitude = 2;
}

message PlayerUpdateResponse {
  repeated WildPokemon wild_pokemons = 1;
  repeated FortData forts = 2;
  int32 forts_nearby = 3;
}

message DownloadItemTemplatesRequest {
	// No message needed.
}

message DownloadItemTemplatesResponse {
  bool success = 1;
  repeated ItemTemplate item_templates = 2;
  uint64 timestamp_ms = 3;

  message ItemTemplate {
    string template_id = 1;

    PokemonSettings pokemon_settings = 2;
    ItemSettings item_settings = 3;
    MoveSettings move_settings = 4;
    MoveSequenceSettings move_sequence_settings = 5;
    TypeEffectiveSettings type_effective = 8;
    BadgeSettings badge_settings = 10; 
    CameraSettings camera = 11;
    PlayerLevelSettings player_level = 12;
    GymLevelSettings gym_level = 13;
    GymBattleSettings battle_settings = 14;
    EncounterSettings encounter_settings = 15;
    IapItemDisplay iap_item_display = 16;
    IapSettings iap_settings = 17;
    PokemonUpgradeSettings pokemon_upgrades = 18;
    EquippedBadgeSettings equipped_badges = 19;
  }
}

message UseItemCaptureRequest {
  .AllEnum.ItemId item_id = 1;
  fixed64 encounter_id = 2;
  string spawn_point_guid = 3;
}

message UseItemCaptureResponse {
  bool success = 1;
  double item_capture_mult = 2;
  double item_flee_mult = 3;
  bool stop_movement = 4;
  bool stop_attack = 5;
  bool target_max = 6;
  bool target_slow = 7;
}

message ReleasePokemonRequest {
  fixed64 pokemon_id = 1;
}

message ReleasePokemonResponse {
  Result result = 1;
  int32 candy_awarded = 2;

  enum Result {
    UNSET = 0;
    SUCCESS = 1;
    POKEMON_DEPLOYED = 2;
    FAILED = 3;
    ERROR_POKEMON_IS_EGG = 4;
  }
}

message GetHatchedEggsRequest {
  // No message needed.
}

// Confirm if this is correct, I think that it should be "repeated HatchedEgg hatched_eggs" or something like that.
message GetHatchedEggsResponse {
  bool success = 1;
  repeated uint64 pokemon_id = 2 [packed=true]; // Might be POGOProtos.Enums.Pokemon
  repeated int32 experience_awarded = 3;
  repeated int32 candy_awarded = 4;
  repeated int32 stardust_awarded = 5;
}

message FortSearchRequest {
  string fort_id = 1;
  double player_latitude = 2;
  double player_longitude = 3;
  double fort_latitude = 4;
  double fort_longitude = 5;
}

message FortSearchResponse {
  Result result = 1;
  repeated ItemAward items_awarded = 2;
  int32 gems_awarded = 3;
  PokemonData pokemon_data_egg = 4;
  int32 experience_awarded = 5;
  int64 cooldown_complete_timestamp_ms = 6;
  int32 chain_hack_sequence_number = 7;

  message ItemAward {
    .AllEnum.ItemId item_id = 1;
    int32 item_count = 2;
  }

  enum Result {
    NO_RESULT_SET = 0;
    SUCCESS = 1;
    OUT_OF_RANGE = 2;
    IN_COOLDOWN_PERIOD = 3;
    INVENTORY_FULL = 4;
  }
}

message FortDetailsRequest {
  string fort_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message FortDetailsResponse {
  string fort_id = 1;
  .AllEnum.TeamColor team_color = 2;
  PokemonData pokemon_data = 3;
  string name = 4;
  repeated string image_urls = 5;
  int32 fp = 6;
  int32 stamina = 7;
  int32 max_stamina = 8;
  .AllEnum.FortType type = 9;
  double latitude = 10;
  double longitude = 11;
  string description = 12;
  repeated FortModifier modifiers = 13;
}

message FortModifier {
  .AllEnum.ItemId item_id = 1;
  int64 expiration_timestamp_ms = 2;
  string deployer_player_codename = 3;
}

message EncounterRequest {
  fixed64 encounter_id = 1;
  string spawnpoint_id = 2;
  double player_latitude = 3;
  double player_longitude = 4;
}

message EncounterResponse {
  WildPokemon wild_pokemon = 1;
  Background background = 2;
  Status status = 3;
  CaptureProbability capture_probability = 4;

  enum Background {
    PARK = 0;
    DESERT = 1;
  }
  
  enum Status {
    ENCOUNTER_ERROR = 0;
    ENCOUNTER_SUCCESS = 1;
    ENCOUNTER_NOT_FOUND = 2;
    ENCOUNTER_CLOSED = 3;
    ENCOUNTER_POKEMON_FLED = 4;
    ENCOUNTER_NOT_IN_RANGE = 5;
    ENCOUNTER_ALREADY_HAPPENED = 6;
    POKEMON_INVENTORY_FULL = 7;
  }
}

message CaptureProbability {
  repeated .AllEnum.ItemId pokeball_type = 1;
  repeated float capture_probability = 2;
  double reticle_difficulty_scale = 12;
}

message DiskEncounterRequest {
  fixed64 encounter_id = 1;
  string fort_id = 2;
  double player_latitude = 3;
  double player_longitude = 4;
}

message DiskEncounterResponse {
  Result result = 1;
  PokemonData pokemon_data = 2;
  CaptureProbability capture_probability = 3;

  enum Result {
    UNKNOWN = 0;
    SUCCESS = 1;
    NOT_AVAILABLE = 2;
    NOT_IN_RANGE = 3;
    ENCOUNTER_ALREADY_FINISHED = 4;
    POKEMON_INVENTORY_FULL = 5;
  }
}

message CatchPokemonRequest {
  fixed64 encounter_id = 1;
  int32 pokeball = 2;
  double normalized_reticle_size = 3;
  string spawn_point_guid = 4;
  bool hit_pokemon = 5;
  double spin_modifier = 6;
  double NormalizedHitPosition = 7;
}

message CatchPokemonResponse {
  CatchStatus status = 1;
  double miss_percent = 2;
  uint64 captured_pokemon_id = 3;
  CaptureScore scores = 4;

  enum CatchStatus {
    CATCH_ERROR = 0;
    CATCH_SUCCESS = 1;
    CATCH_ESCAPE = 2;
    CATCH_FLEE = 3;
    CATCH_MISSED = 4;
  }
}

message CaptureScore {
  repeated .AllEnum.ActivityType activity_type = 1;
  repeated int32 xp = 2;
  repeated int32 candy = 3;
  repeated int32 stardust = 4;
}

message CheckAwardedBadgesRequest {
	// No message needed.
}

// Confirm if this is correct, I think that it should be "repeated AwardedBadge awarded_badges" or something like that.
message CheckAwardedBadgesResponse {
  bool success = 1;
  repeated .AllEnum.BadgeType awarded_badges = 2;
  repeated int32 awarded_badge_levels = 3;
}

message EquippedBadgeSettings {
  int64 equip_badge_cooldown_ms = 1;
  repeated float catch_probability_bonus = 2;
  repeated float flee_probability_bonus = 3;
}

message PokemonUpgradeSettings {
  int32 upgrades_per_level = 1;
  int32 allowed_levels_above_player = 2;
  repeated int32 candy_cost = 3;
  repeated int32 stardust_cost = 4;
}

message IapSettings {
  int32 daily_bonus_coins = 1;
  repeated int32 daily_defender_bonus_per_pokemon = 2;
  int32 daily_defender_bonus_max_defenders = 3;
  repeated string daily_defender_bonus_currency = 4;
  int64 min_time_between_claims_ms = 5;
  bool daily_bonus_enabled = 6;
  bool daily_defender_bonus_enabled = 7;
}

message IapItemDisplay {
  string sku = 1;
  .AllEnum.HoloIapItemCategory category = 2;
  int32 sort_order = 3;
  repeated .AllEnum.ItemId item_ids = 4;
  repeated int32 counts = 5;
}

message EncounterSettings {
  float spin_bonus_threshold = 1;
  float excellent_throw_threshold = 2;
  float great_throw_threshold = 3;
  float nice_throw_threshold = 4;
  int32 milestone_threshold = 5;
}

message GymBattleSettings {
  float energy_per_sec = 1;
  float dodge_energy_cost = 2;
  float retarget_seconds = 3;
  float enemy_attack_interval = 4;
  float attack_server_interval = 5;
  float round_duration_seconds = 6;
  float bonus_time_per_ally_seconds = 7;
  int32 maximum_attackers_per_battle = 8;
  float same_type_attack_bonus_multiplier = 9;
  int32 maximum_energy = 10;
  float energy_delta_per_health_lost = 11;
  int32 dodge_duration_ms = 12;
  int32 minimum_player_level = 13;
  int32 swap_duration_ms = 14;
}

message GymLevelSettings {
	repeated int32 required_experience = 1;
	repeated int32 leader_slots = 2;
	repeated int32 trainer_slots = 3;
	repeated int32 search_roll_bonus = 4;
}

message PlayerLevelSettings {
	repeated int32 rank_num = 1;
	repeated int32 required_experience = 2;
	repeated float cp_multiplier = 3;
	int32 max_egg_player_level = 4;
	int32 max_encounter_player_level = 5;
}

message CameraSettings {
	string next_camera = 1;
	repeated .AllEnum.CameraInterpolation interpolation = 2;
	repeated .AllEnum.CameraTarget target_type = 3;
	repeated float ease_in_speed = 4;
	repeated float east_out_speed = 5;
	repeated float duration_seconds = 6;
	repeated float wait_seconds = 7;
	repeated float transition_seconds = 8;
	repeated float angle_degree = 9;
	repeated float angle_offset_degree = 10;
	repeated float pitch_degree = 11;
	repeated float pitch_offset_degree = 12;
	repeated float roll_degree = 13;
	repeated float distance_meters = 14;
	repeated float height_percent = 15;
	repeated float vert_ctr_ratio = 16;
}

message BadgeSettings {
  .AllEnum.BadgeType badge_type = 1;
  int32 badge_rank = 2;
  repeated int32 targets = 3;
}

message TypeEffectiveSettings {
  repeated float attack_scalar = 1;
  .AllEnum.PokemonType attack_type = 2;
}

message MoveSequenceSettings {
  repeated string sequence = 1;
}

message MoveSettings {
  .AllEnum.PokemonMovementType movement_id = 1;
  int32 animation_id = 2;
  .AllEnum.PokemonType pokemon_type = 3;
  float power = 4;
  float accuracy_chance = 5;
  float critical_chance = 6;
  float heal_scalar = 7;
  float stamina_loss_scalar = 8;
  int32 trainer_level_min = 9;
  int32 trainer_level_max = 10;
  string vfx_name = 11;
  int32 duration_ms = 12;
  int32 damage_window_start_ms = 13;
  int32 damage_window_end_ms = 14;
  int32 energy_delta = 15;
}

message PokemonSettings {
  .AllEnum.PokemonId pokemon_id = 1;
  float model_scale = 3;
  .AllEnum.PokemonType type = 4;
  .AllEnum.PokemonType type_2 = 5;
  CameraAttributes camera = 6;
  EncounterAttributes encounter = 7;
  StatsAttributes stats = 8;
  repeated .AllEnum.PokemonMove quick_moves = 9;
  repeated .AllEnum.PokemonMove cinematic_moves = 10;
  repeated float animation_time = 11;
  repeated .AllEnum.PokemonId evolution_ids = 12;
  int32 evolution_pips = 13;
  .AllEnum.PokemonClass class = 14;
  float pokedex_height_m = 15;
  float pokedex_weight_kg = 16;
  .AllEnum.PokemonId parent_pokemon_id = 17;
  float height_std_dev = 18;
  float weight_std_dev = 19;
  float km_distance_to_hatch = 20;
  .AllEnum.PokemonFamilyId family_id = 21;
  int32 candy_to_evolve = 22;
}

message CameraAttributes {
  float disk_radius_m = 1;
  float cylinder_radius_m = 2;
  float cylinder_height_m = 3;
  float cylinder_ground_m = 4;
  float shoulder_mode_scale = 5;
}

message EncounterAttributes {
  float base_capture_rate = 1;
  float base_flee_rate = 2;
  float collision_radius_m = 3;
  float collision_height_m = 4;
  float collision_head_radius_m = 5;
  .AllEnum.PokemonMovementType movement_type = 6;
  float movement_timer_s = 7;
  float jump_time_s = 8;
  float attack_timer_s = 9;
}

message StatsAttributes {
  int32 base_stamina = 1;
  int32 base_attack = 2;
  int32 base_defense = 3;
  int32 dodge_energy_delta = 8;
}

message ItemSettings {
  .AllEnum.ItemId item_id = 1;
  .AllEnum.ItemType item_type = 2;
  .AllEnum.ItemCategory category = 3;
  float drop_freq = 4;
  int32 drop_trainer_level = 5;

  // One of the below attributes will be set in the response, the other will be null.

  PokeballAttributes pokeball = 6;
  PotionAttributes potion = 7;
  ReviveAttributes revive = 8;
  BattleAttributes battle = 9;
  FoodAttributes food = 10;
  InventoryUpgradeAttributes inventory_upgrade = 11;
  ExperienceBoostAttributes xp_boost = 12;
  IncenseAttributes incense = 13;
  EggIncubatorAttributes egg_incubator = 14;
  FortModifierAttributes fort_modifier = 15;
}

message BattleAttributes {
  float sta_percent = 1;
}

message EggIncubatorAttributes {
  .AllEnum.EggIncubatorType incubator_type = 1;
  int32 uses = 2;
  float distance_multiplier = 3;
}

message ExperienceBoostAttributes {
  float xp_multiplier = 1;
  int32 boost_duration_ms = 2;
}

message FoodAttributes {
  repeated .AllEnum.ItemEffect item_effect = 1;
  repeated float item_effect_percent = 2;
  float growth_percent = 3;
}

message FortModifierAttributes {
  int32 modifier_lifetime_seconds = 1;
  int32 troy_disk_num_pokemon_spawned = 2;
}

message IncenseAttributes {
  int32 incense_lifetime_seconds = 1;
  repeated .AllEnum.PokemonType pokemon_type = 2;
  float pokemon_incense_type_probability = 3;
  int32 standing_time_between_encounters_seconds = 4;
  int32 moving_time_between_encounter_seconds = 5;
  int32 distance_required_for_shorter_interval_meters = 6;
  int32 pokemon_attracted_length_sec = 7;
}

message InventoryUpgradeAttributes {
  int32 additional_storage = 1;
  .AllEnum.InventoryUpgradeType upgrade_type = 2;
}

message PokeballAttributes {
  .AllEnum.ItemEffect item_effect = 1;
  float capture_multi = 2;
  float capture_multi_effect = 3;
  float item_effect_mod = 4;
}

message PotionAttributes {
  float sta_percent = 1;
  int32 sta_amount = 2;
}

message ReviveAttributes {
  float sta_percent = 1;
}

// POKEMON TRANSFER
message TransferPokemon {
    fixed64 PokemonId = 1;
}

message TransferPokemonOut {
    int32 Status = 1;
    int32 CandyAwarded = 2;
}

// EVOLVE
message EvolvePokemon {
    fixed64 PokemonId = 1;
}


message EvolvePokemonOut {
    EvolvePokemonStatus Result = 1;
    Pokemon EvolvedPokemon = 2;
    int32 ExpAwarded = 3;
    int32 CandyAwarded = 4;

	
	enum EvolvePokemonStatus {
		POKEMON_EVOLVED_UNSET = 0;
		POKEMON_EVOLVED_SUCCESS = 1;
		FAILED_POKEMON_MISSING = 2;
		FAILED_INSUFFICIENT_RESOURCES = 3;
		FAILED_POKEMON_CANNOT_EVOLVE = 4;
		FAILED_POKEMON_IS_DEPLOYED = 5;
	}
}